--- a/my-app/package.json
+++ b/my-app/package.json
@@ -38,9 +38,11 @@
     ]
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "globals": "^15.2.0"
+    "globals": "^15.2.0",
+    "url-loader": "^4.1.1"
   }
 }
